Fix an issue where display text overflows

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
     text-align: right;
     color: rgb(88, 123, 0);
     font-weight: bold;
+    overflow: hidden;
 }
 .input{
     font-size: 25px;
